Scrollbar Fix

--- a/css/controller.css
+++ b/css/controller.css
@@ -65,16 +65,16 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.1);
 }
 ::-webkit-scrollbar-thumb {
-  background: rgba(0,0,0,1);
+  background: rgba(0,0,0,0.2);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.4);
 }
 
 body {
